tests/ui/from_fn_with_wrong_type_fail.rs
fn main() {
    let _: dynify::Fn!(=> u32) = dynify::from_fn!(|| 123i32);
}
